--- a/infrastructure/docker-compose/zookeeper.yml
+++ b/infrastructure/docker-compose/zookeeper.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   zookeeper:
-    image: confluentinc/cp-zookeeper:${KAFKA_VERSION:-latest}
+    image: confluentinc/cp-zookeeper:${KAFKA_VERSION}
     hostname: zookeeper
     ports:
       - "2181:2181"
@@ -11,7 +11,6 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_INIT_LIMIT: 5
       ZOOKEEPER_SYNC_LIMIT: 2
-      ZOOKEEPER_SERVERS: zookeeper:2888:3888
       KAFKA_OPTS: "-Dzookeeper.4lw.commands.whitelist=ruok"
     volumes:
       - "./volumes/zookeeper/data:/var/lib/zookeeper/data"
