--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -19,6 +19,7 @@ spring:
     init:
       platform: postgres
       schema-locations: classpath:init-schema.sql
+      data-locations: classpath:init-data.sql
       mode: always
 
 
