--- a/order-service/order-container/src/main/resources/application.yml
+++ b/order-service/order-container/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
     init:
       platform: postgres
       schema-locations: classpath:init-schema.sql
-      data-locations: classpath:init-data.sql
+#      data-locations: classpath:init-data.sql
       mode: always
 
 kafka-config:
