--- a/payment-service/payment-domain/payment-application-service/pom.xml
+++ b/payment-service/payment-domain/payment-application-service/pom.xml
@@ -41,6 +41,10 @@
             <groupId>com.regexit.orm</groupId>
             <artifactId>saga</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
